# PySocial-BE

./: .env  .gitignore  README.md  docker-compose.yml  generate_docs.py  pyproject.toml
DB/samples/: restore-dvdrental.sh
db-samples/: restore-dvdrental.sh
samples/: servers.json
src/app/: main.py
