[project]
name = "PySocial-BE"
version = "0.1.0"
description = "Backend clone of social media app by using FastAPI"

authors = [{ name = "Mohamed Raslan", email = "MohamedRaslanG@gmail.com" }]
maintainers = [{ name = "Mohamed Raslan", email = "MohamedRaslanG@gmail.com" }]


keywords = ["api", "fastapi", "backend", "socialmedia"]

requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = ["fastapi[standard]>=0.115.7"]

[project.urls]
homepage = "https://github.com/MohamedRaslan/PySocial-BE"
source = "https://github.com/MohamedRaslan/PySocial-BE"
tracker = "https://github.com/MohamedRaslan/PySocial-BE/issues"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts] # https://pdm-project.org/latest/usage/scripts/
_.env_file = ".env.dev"
